Whoa! Fix type x > px that was breaking the user_column overflow in admin view. [ insert emoji ]

--- a/app/assets/stylesheets/white_theme/admin.scss
+++ b/app/assets/stylesheets/white_theme/admin.scss
@@ -112,7 +112,7 @@
         width: 90px;
       }
       .user_column {
-        width: 164x;
+        width: 164px;
         min-width: 164px;
         margin-right: 12px;
         display: flex;
